# pulumi-shopkeeper

./: Makefile
.devcontainer/: Dockerfile  devcontainer.json
deployment-templates/: release.yml
examples/simple/: Pulumi.yaml  index.ts
misc/: pyproject.toml
provider/: go.mod
provider/cmd/pulumi-resource-shopkeeper/: pulumi-resource-shopkeeper  pyproject.toml  run-provider.py  setup.py
provider/cmd/pulumi-resource-shopkeeper/shopkeeper_provider/: provider.py
provider/cmd/pulumi-resource-shopkeeper/tests/: test_pulumi.py
sdk/: go.mod
